added container to index and modified style file

--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>welcome</h1>
-    <p>this is a paragraph</p>
-    <p>ok nice job</p>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <h1>welcome</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus,
+        sapiente? Ratione aspernatur unde, repellat obcaecati consequuntur error
+        harum vel? Ratione maiores placeat natus iste quos inventore numquam
+        incidunt, vitae totam?
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus,
+        sapiente? Ratione aspernatur unde, repellat obcaecati consequuntur error
+        harum vel? Ratione maiores placeat natus iste quos inventore numquam
+        incidunt, vitae totam?
+      </p>
+      <a href="#">Read more...</a>
+    </div>
+  </body>
 </html>
